Don't delete a QObject from inside a slot.

If there are any pending calls to that object to be processed deleting
the object can cause them to crash. (such as in KTp's service)

Using deleteLater() is safer.

BUG: 325376
REVIEW: 113128